--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -2,6 +2,7 @@
   <div class="col-md-6">
     <h3>Day 1</h3>
     <table class="table table-striped">
+        <tr> <td>8:30</td>  <td>Welcome and introduction</td> </tr>
       <tr> <td>09:00</td>  <td>Automating tasks with the Unix shell (<strong>Will French</strong>)</td> </tr>
       <tr> <td>10:30</td>  <td>Coffee</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
@@ -13,6 +14,7 @@
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
+        <tr> <td>8:30</td>  <td>Questions and review</td> </tr>
       <tr> <td>09:00</td>  <td>Version control with Git (<strong>Chris Fonnesbeck</strong>)</td> </tr>
       <tr> <td>10:30</td>  <td>Coffee</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
